# stats_stuff

./: .gitignore  README.md  index.html  main.py  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  run.sh  stats_practice.ipynb
Backend/: app.py  engine.py  extra.py  irrelevant.py  main.py  stats_test.py  studio.py  weighted_stats.py
Backend/templates/studio/: analyze.html  base.html  docs.html  index.html  runs.html
Data/: data.csv
Python/: app.py  extra.py  irrelevant.py  main.py  stats_test.py  weighted_stats.py
Web/CSS/: styles.css
Web/HTML/: benchmarks.html  changelog.html  index.html  methodology.html
Web/JS/: nav.js  script.js  transition.js
Web/TS/: script.js
data/: data.csv
tests/: test_engine.py  test_extra.py
