[project]
name = "stats-and-more"
version = "0.1.0"
description = "Interactive descriptive statistics with a minimal FastAPI web service"
readme = "README.md"
requires-python = ">=3.14.6"
dependencies = [
    "fastapi==0.138.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

