[project]
name = "stats-and-more"
version = "0.1.0"
description = "Descriptive statistics with a minimal FastAPI web service"
readme = "README.md"
requires-python = ">=3.14.6"
dependencies = [
    "fastapi==0.139.0",
    "ipykernel>=7.3.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "numpy==2.5.1",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "ruff==0.15.21",
    "scipy>=1.18.0",
    "scipy-stubs==1.18.0.1",
    "statsmodels>=0.14.6",
    "uvicorn[standard]==0.51.0",
    "websockets==16.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
# Tests import the stats engine directly (`from engine import ...`); Backend/ isn't
# an installed package, so put it on the path rather than sprinkling sys.path hacks.
pythonpath = ["Backend"]
testpaths = ["tests"]

